Criando header da aplicação

--- a/index.html
+++ b/index.html
@@ -16,7 +16,18 @@
 </head>
 
 <body>
-  <h1>Hello World</h1>
+  <div id="app">
+    <header class="header-container">
+      <img src="src/assets/Logo.png" alt="Member Club">
+
+      <form>
+        <input type="text" placeholder="ID do cartão">
+        <button disabled>
+          <img src="src/assets/icons/arrow-elbow-down-left.svg" alt="Pesquisar">
+        </button>
+      </form>
+    </header>
+  </div>
 </body>
 
 </html>
