Estruturando e estilizando a sessão de dados do cliente

--- a/index.html
+++ b/index.html
@@ -27,6 +27,27 @@
         </button>
       </form>
     </header>
+
+    <main>
+      <div class="user-container">
+        <div class="gradient-container">
+          <img src="https://avatars.githubusercontent.com/u/4248081?v=4" alt="">
+        </div>
+        <div class="user-info">
+          <strong>Filipe Dechamps</strong>
+          <span>Cliente desde 18/09/2023</span>
+        </div>
+      </div>
+      <div class="loyalty-card-container">
+        Cartão fidelidade
+      </div>
+      <div class="history-container">
+        Histórico
+      </div>
+      <div class="progress-container">
+        Progresso
+      </div>
+    </main>
   </div>
 </body>
 
