--- a/index.html
+++ b/index.html
@@ -34,12 +34,52 @@
           <img src="https://avatars.githubusercontent.com/u/4248081?v=4" alt="">
         </div>
         <div class="user-info">
-          <strong>Filipe Dechamps</strong>
+          <h1>Filipe Dechamps</h1>
           <span>Cliente desde 18/09/2023</span>
         </div>
       </div>
       <div class="loyalty-card-container">
-        Cartão fidelidade
+        <header>
+          <div>
+            <h2>Cartão fidelidade</h2>
+            <span>Ao fazer cortes de cabelo, o décimo sai de graça!</span>
+          </div>
+
+          <span class="customer-id">ID: 124-537-835-230</span>
+        </header>
+
+        <div class="slots-container">
+          <div class="slot">
+            <img src="./src/assets/PinCheck.png" alt="Check">
+          </div>
+          <div class="slot">
+            <img src="./src/assets/PinCheck.png" alt="Check">
+          </div>
+          <div class="slot">
+            <img src="./src/assets/PinCheck.png" alt="Check">
+          </div>
+          <div class="slot">
+            <img src="./src/assets/PinCheck.png" alt="Check">
+          </div>
+          <div class="slot">
+            <img src="./src/assets/PinCheck.png" alt="Check">
+          </div>
+          <div class="slot">
+            <img src="./src/assets/PinCheck.png" alt="Check">
+          </div>
+          <div class="slot">
+            <img src="./src/assets/PinCheck.png" alt="Check">
+          </div>
+          <div class="slot">
+            <img src="./src/assets/PinCheck.png" alt="Check">
+          </div>
+          <div class="slot">
+            <img src="./src/assets/PinCheck.png" alt="Check">
+          </div>
+          <div class="slot">
+            <img class="gift-icon" src="./src/assets/icons/gift-fill.svg" alt="Ícone de presente">
+          </div>
+        </div>
       </div>
       <div class="history-container">
         Histórico
