--- a/index.html
+++ b/index.html
@@ -85,7 +85,23 @@
         Histórico
       </div>
       <div class="progress-container">
-        Progresso
+        <div>
+          <span>
+            <strong>3</strong> cortes restantes
+          </span>
+
+          <div class="progress-bar-container">
+            <div class="progress-bar">
+              <div class="progress-bar-fill"></div>
+            </div>
+
+            <span>7 de 10</span>
+          </div>
+        </div>
+
+        <div>
+          <img src="./src/assets/PinGift.png" alt="Imagem de um presente">
+        </div>
       </div>
     </main>
   </div>
