Estruturando e estilizando a seção de histórico

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </header>
 
     <main>
-      <div class="user-container">
+      <section class="user-container">
         <div class="gradient-container">
           <img src="https://avatars.githubusercontent.com/u/4248081?v=4" alt="">
         </div>
@@ -37,8 +37,8 @@
           <h1>Filipe Dechamps</h1>
           <span>Cliente desde 18/09/2023</span>
         </div>
-      </div>
-      <div class="loyalty-card-container">
+      </section>
+      <section class="loyalty-card-container">
         <header>
           <div>
             <h2>Cartão fidelidade</h2>
@@ -80,11 +80,99 @@
             <img class="gift-icon" src="./src/assets/icons/gift-fill.svg" alt="Ícone de presente">
           </div>
         </div>
-      </div>
-      <div class="history-container">
-        Histórico
-      </div>
-      <div class="progress-container">
+      </section>
+      <section class="history-container">
+        <div class="history-content">
+          <header>
+            <h3>Histórico</h3>
+            <span>7 cortes</span>
+          </header>
+
+          <ul>
+            <li>
+              <div>
+                <strong>29/04/2024</strong>
+                <span>18:30</span>
+              </div>
+
+              <div>
+                <img src="/src/assets/icons/seal-check.svg" alt="Check">
+              </div>
+            </li>
+            <li>
+              <div>
+                <strong>29/04/2024</strong>
+                <span>18:30</span>
+              </div>
+
+              <div>
+                <img src="/src/assets/icons/seal-check.svg" alt="Check">
+              </div>
+            </li>
+            <li>
+              <div>
+                <strong>29/04/2024</strong>
+                <span>18:30</span>
+              </div>
+
+              <div>
+                <img src="/src/assets/icons/seal-check.svg" alt="Check">
+              </div>
+            </li>
+            <li>
+              <div>
+                <strong>29/04/2024</strong>
+                <span>18:30</span>
+              </div>
+
+              <div>
+                <img src="/src/assets/icons/seal-check.svg" alt="Check">
+              </div>
+            </li>
+            <li>
+              <div>
+                <strong>29/04/2024</strong>
+                <span>18:30</span>
+              </div>
+
+              <div>
+                <img src="/src/assets/icons/seal-check.svg" alt="Check">
+              </div>
+            </li>
+            <li>
+              <div>
+                <strong>29/04/2024</strong>
+                <span>18:30</span>
+              </div>
+
+              <div>
+                <img src="/src/assets/icons/seal-check.svg" alt="Check">
+              </div>
+            </li>
+            <li>
+              <div>
+                <strong>29/04/2024</strong>
+                <span>18:30</span>
+              </div>
+
+              <div>
+                <img src="/src/assets/icons/seal-check.svg" alt="Check">
+              </div>
+            </li>
+            <li>
+              <div>
+                <strong>29/04/2024</strong>
+                <span>18:30</span>
+              </div>
+
+              <div>
+                <img src="/src/assets/icons/seal-check.svg" alt="Check">
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="progress-container">
         <div>
           <span>
             <strong>3</strong> cortes restantes
@@ -102,7 +190,7 @@
         <div>
           <img src="./src/assets/PinGift.png" alt="Imagem de um presente">
         </div>
-      </div>
+      </section>
     </main>
   </div>
 </body>
