Alimentando seção de progresso

--- a/index.html
+++ b/index.html
@@ -105,15 +105,15 @@
       <section class="progress-container">
         <div>
           <span>
-            <strong>3</strong> cortes restantes
+            <strong id="totalCutsRemaining">3</strong> cortes restantes
           </span>
 
           <div class="progress-bar-container">
             <div class="progress-bar">
-              <div class="progress-bar-fill"></div>
+              <div id="progressBar" class="progress-bar-fill"></div>
             </div>
 
-            <span>7 de 10</span>
+            <span id="totalCutsControll">7 de 10</span>
           </div>
         </div>
 
