Finalização do projeto

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </form>
     </header>
 
-    <main>
+    <main id="main-content" class="hidden">
       <section class="user-container">
         <div class="gradient-container">
           <img id="avatarImg" src="https://avatars.githubusercontent.com/u/4248081?v=4" alt="">
@@ -45,40 +45,18 @@
             <span>Ao fazer cortes de cabelo, o décimo sai de graça!</span>
           </div>
 
-          <span class="customer-id">ID: 124-537-835-230</span>
+          <span id="customer-id" class="customer-id">ID: 124-537-835-230</span>
         </header>
 
-        <div class="slots-container">
-          <div class="slot">
-            <img src="./src/assets/PinCheck.png" alt="Check">
-          </div>
-          <div class="slot">
-            <img src="./src/assets/PinCheck.png" alt="Check">
-          </div>
-          <div class="slot">
-            <img src="./src/assets/PinCheck.png" alt="Check">
-          </div>
-          <div class="slot">
-            <img src="./src/assets/PinCheck.png" alt="Check">
-          </div>
-          <div class="slot">
-            <img src="./src/assets/PinCheck.png" alt="Check">
-          </div>
-          <div class="slot">
-            <img src="./src/assets/PinCheck.png" alt="Check">
-          </div>
-          <div class="slot">
-            <img src="./src/assets/PinCheck.png" alt="Check">
-          </div>
-          <div class="slot">
-            <img src="./src/assets/PinCheck.png" alt="Check">
+        <div id="slots-container" class="slots-container">
+          <!-- <div class="slot">
           </div>
           <div class="slot">
             <img src="./src/assets/PinCheck.png" alt="Check">
           </div>
           <div class="slot">
             <img class="gift-icon" src="./src/assets/icons/gift-fill.svg" alt="Ícone de presente">
-          </div>
+          </div> -->
         </div>
       </section>
       <section class="history-container">
